reworded some docs

--- a/docs/user/production-considerations/task-manager-production-considerations.asciidoc
+++ b/docs/user/production-considerations/task-manager-production-considerations.asciidoc
@@ -133,9 +133,9 @@ As demonstrated in <<task-manager-health-evaluate-the-capacity-estimation, Evalu
 
 These are estimates based on historical data and should not be used as predictions, but can be used as a rough guide when scaling the system.
 
-We recommend provisioning at least as many {kib} instances as estimated by `min_required_kibana`, but keep in mind that this number is based on the estimated `avg_required_throughput_per_minute`, which is based on average historical performance, and cannot accurately predict future requirments.
+We recommend provisioning at least as many {kib} instances as proposed by `proposed_kibana`, but keep in mind that this number is based on the estimated required throughput, which is based on average historical performance, and cannot accurately predict future requirments.
 
-We recommend provisioning enough {kib} instances to ensure a buffer between the estimated `max_throughput_per_minute` and `avg_required_throughput_per_minute`, otherwise there might be insufficient capacity to handle spikes of ad-hoc tasks. How much of a buffer is required largely depends on your use case, but keep in mind that `avg_required_throughput_per_minute` takes into account recent spikes and, as long as they are representative of your system's behaviour, shouldn't require much of a buffer.
+We recommend provisioning enough {kib} instances to ensure a buffer between the estimated `max_throughput_per_minute` and `avg_required_throughput_per_minute`, otherwise there might be insufficient capacity to handle spikes of ad-hoc tasks. How much of a buffer is needed largely depends on your use case, but keep in mind that `avg_required_throughput_per_minute` takes into account recent spikes and, as long as they are representative of your system's behaviour, shouldn't require much of a buffer.
 
 [float]
 ===== Manual estimation
