docs: ✏️ encourage to add to the risk list

--- a/RISK_MATRIX.mdx
+++ b/RISK_MATRIX.mdx
@@ -4,7 +4,8 @@ When merging a new feature of considerable size or modifying an existing one,
 consider adding a *Risk Matrix* section to your PR in collaboration with other
 developers on your team and the QA team.
 
-Below are some general themes to consider for the *Risk Matrix*:
+Below are some general themes to consider for the *Risk Matrix*. (Feel free to
+add to this list.)
 
 
 ## General risks
