--- a/docs/CHANGELOG.asciidoc
+++ b/docs/CHANGELOG.asciidoc
@@ -64,8 +64,6 @@ The 7.13.1 release includes the following bug fixes.
 [float]
 [[fixes-v7.13.1]]
 === Bug Fixes
-Design::
-* Adds appropriate table caption for table listing generated reports {kibana-pull}100118[#100118]
 Fleet::
 * Adds missing install button for integrations that aren't installed yet {kibana-pull}100370[#100370]
 Lens & Visualizations::
@@ -74,6 +72,8 @@ Machine Learning::
 * Fixes field used in remote desktop protocol (RDP) anomaly detection job to event.type {kibana-pull}100000[#100000]
 Querying & Filtering::
 * Fixes bug with scripted number range filters {kibana-pull}99554[#99554]
+Sharing::
+* Adds appropriate table caption for table listing generated reports {kibana-pull}100118[#100118]
 Security::
 * Gracefully handle malformed index patterns on role management pages {kibana-pull}99918[#99918]
 
