[DOCS] Adds link to runtime fields

--- a/docs/user/discover.asciidoc
+++ b/docs/user/discover.asciidoc
@@ -117,8 +117,8 @@ column header, and then use the move controls.
 === Add a field to your index pattern
 
 What happens if you forgot to define an important value as a separate field? Or, what if you
-want to combine two fields and treat them as one?
-You can add a field to your index pattern from inside of **Discover**,
+want to combine two fields and treat them as one? This is where {ref}/runtime.html[runtime fields] come into play.
+You can add a runtime field to your index pattern from inside of **Discover**,
 and then use that field for analysis and visualizations,
 the same way you do with other fields.
 
