--- a/x-pack/plugins/translations/translations/zh-CN.json
+++ b/x-pack/plugins/translations/translations/zh-CN.json
@@ -8004,8 +8004,6 @@
     "xpack.enterpriseSearch.appSearch.result.showAdditionalFields": "显示其他 {numberOfAdditionalFields, number} 个{numberOfAdditionalFields, plural, other {字段}}",
     "xpack.enterpriseSearch.appSearch.result.title": "文档 {id}",
     "xpack.enterpriseSearch.appSearch.roleMapping.emptyRoleMappingsBody": "成功验证的所有用户将被分配所有者角色，可访问所有引擎。添加新角色以覆盖默认值。",
-    "xpack.enterpriseSearch.appSearch.roleMapping.saveRoleMappingButtonLabel": "保存角色映射",
-    "xpack.enterpriseSearch.appSearch.roleMapping.updateRoleMappingButtonLabel": "更新角色映射",
     "xpack.enterpriseSearch.appSearch.roleMappingCreatedMessage": "角色映射已成功创建。",
     "xpack.enterpriseSearch.appSearch.roleMappingDeletedMessage": "已成功删除角色映射",
     "xpack.enterpriseSearch.appSearch.roleMappingsEngineAccessHeading": "引擎访问",
@@ -8106,6 +8104,8 @@
     "xpack.enterpriseSearch.roleMapping.roleLabel": "角色",
     "xpack.enterpriseSearch.roleMapping.roleMappingsDescription": "为 elasticsearch-native 和 elasticsearch-saml 身份验证定义角色映射。",
     "xpack.enterpriseSearch.roleMapping.roleMappingsTitle": "用户和角色",
+    "xpack.enterpriseSearch.roleMapping.saveRoleMappingButtonLabel": "保存角色映射",
+    "xpack.enterpriseSearch.roleMapping.updateRoleMappingButtonLabel": "更新角色映射",
     "xpack.enterpriseSearch.schema.addFieldModal.fieldNameNote.correct": "字段名称只能包含小写字母、数字和下划线",
     "xpack.enterpriseSearch.schema.errorsTable.control.review": "复查",
     "xpack.enterpriseSearch.schema.errorsTable.heading.error": "错误",
@@ -8415,7 +8415,6 @@
     "xpack.enterpriseSearch.workplaceSearch.roleMapping.groupAssignmentInvalidError": "至少需要一个分配的组。",
     "xpack.enterpriseSearch.workplaceSearch.roleMapping.groupAssignmentTitle": "组分配",
     "xpack.enterpriseSearch.workplaceSearch.roleMapping.roleMappingsTableHeader": "组访问权限",
-    "xpack.enterpriseSearch.workplaceSearch.roleMapping.saveRoleMappingButtonMessage": "{operation}角色映射",
     "xpack.enterpriseSearch.workplaceSearch.roleMapping.userRoleTypeDescription": "用户的功能访问权限仅限于搜索界面和个人设置管理。",
     "xpack.enterpriseSearch.workplaceSearch.roleMappingCreatedMessage": "角色映射已成功创建。",
     "xpack.enterpriseSearch.workplaceSearch.roleMappingDeletedMessage": "已成功删除角色映射",
