docs: ✏️ fix link

--- a/RISK_MATRIX.mdx
+++ b/RISK_MATRIX.mdx
@@ -60,4 +60,4 @@ is used to construct URLs or data structures; this is a common source of
 injection attacks and other vulnerabilities. For more information on all of
 these topics, see [Security best practices][security-best-practices].
 
-[security-best-practices]: (https://www.elastic.co/guide/en/kibana/master/security-best-practices.html#security-best-practices).
+[security-best-practices]: https://www.elastic.co/guide/en/kibana/master/security-best-practices.html
