--- a/x-pack/plugins/translations/translations/zh-CN.json
+++ b/x-pack/plugins/translations/translations/zh-CN.json
@@ -20752,6 +20752,9 @@
     "xpack.savedObjectsTagging.validation.description.errorTooLong": "标签描述不能超过 {length} 个字符",
     "xpack.savedObjectsTagging.validation.name.errorTooLong": "标签名称不能超过 {length} 个字符",
     "xpack.savedObjectsTagging.validation.name.errorTooShort": "标签名称必须至少有 {length} 个字符",
+    "xpack.screenshotting.serverConfig.autoSet.sandboxDisabled": "Chromium 沙盒提供附加保护层，但不受 {osName} OS 支持。自动设置“{configKey}: true”。",
+    "xpack.screenshotting.serverConfig.autoSet.sandboxEnabled": "Chromium 沙盒提供附加保护层，受 {osName} OS 支持。自动启用 Chromium 沙盒。",
+    "xpack.screenshotting.serverConfig.osDetected": "正在以下 OS 上运行：“{osName}”",
     "xpack.searchProfiler.advanceTimeDescription": "将迭代器推进至下一文档所用时间。",
     "xpack.searchProfiler.aggregationProfileTabTitle": "聚合配置文件",
     "xpack.searchProfiler.basicLicenseTitle": "基本级",
