--- a/x-pack/plugins/translations/translations/zh-CN.json
+++ b/x-pack/plugins/translations/translations/zh-CN.json
@@ -20264,11 +20264,6 @@
     "xpack.remoteClusters.updateRemoteCluster.unknownRemoteClusterErrorMessage": "无法编辑集群，ES 未返回任何响应。",
     "xpack.reporting.apiClient.unknownError": "报告作业 {job} 失败。错误未知。",
     "xpack.reporting.breadcrumb": "Reporting",
-    "xpack.reporting.browsers.chromium.errorDetected": "报告时遇到错误：{err}",
-    "xpack.reporting.browsers.chromium.pageErrorDetected": "Reporting 在将忽略的页面上遇到未捕获的错误：{err}",
-    "xpack.reporting.chromiumDriver.disallowedOutgoingUrl": "收到禁止的传出 URL：“{interceptedUrl}”。请求失败，关闭浏览器。",
-    "xpack.reporting.chromiumDriver.failedToCompleteRequest": "无法完成请求：{error}",
-    "xpack.reporting.chromiumDriver.failedToCompleteRequestUsingHeaders": "无法完成使用 headers 的请求：{error}",
     "xpack.reporting.dashboard.csvDownloadStartedMessage": "您的 CSV 将很快下载。",
     "xpack.reporting.dashboard.csvDownloadStartedTitle": "CSV 下载已开始",
     "xpack.reporting.dashboard.downloadCsvPanelTitle": "下载 CSV",
@@ -20299,8 +20294,6 @@
     "xpack.reporting.deprecations.reportingRoleUsers.manualStepTwo": "移除 kibana.yml 中的“xpack.reporting.roles.allow”（如果存在）。",
     "xpack.reporting.deprecations.reportingRoleUsersMessage": "现有用户具有由过时设置授予的 Reporting 权限。",
     "xpack.reporting.deprecations.reportingRoleUsersTitle": "“{reportingUserRoleName}”角色已过时：检查用户角色",
-    "xpack.reporting.diagnostic.browserCrashed": "启动期间浏览器已异常退出",
-    "xpack.reporting.diagnostic.browserErrored": "启动时浏览器进程引发了错误",
     "xpack.reporting.diagnostic.browserMissingDependency": "由于缺少系统依赖项，浏览器无法正常启动。请参见 {url}",
     "xpack.reporting.diagnostic.browserMissingFonts": "浏览器找不到默认字体。请参见 {url} 以解决此问题。",
     "xpack.reporting.diagnostic.noUsableSandbox": "无法使用 Chromium 沙盒。您自行承担使用“xpack.reporting.capture.browser.chromium.disableSandbox”禁用此项的风险。请参见 {url}",
@@ -20428,7 +20421,6 @@
     "xpack.reporting.redirectApp.redirectConsoleErrorPrefixLabel": "重定向页面错误：",
     "xpack.reporting.registerFeature.reportingDescription": "管理您从 Discover、Visualize 和 Dashboard 生成的报告。",
     "xpack.reporting.registerFeature.reportingTitle": "Reporting",
-    "xpack.reporting.screencapture.browserWasClosed": "浏览器已意外关闭！有关更多信息，请查看服务器日志。",
     "xpack.reporting.screencapture.couldntFinishRendering": "尝试等候 {count} 个可视化完成渲染时发生错误。{error}",
     "xpack.reporting.screencapture.couldntLoadKibana": "尝试打开 Kibana URL 时发生错误：{error}",
     "xpack.reporting.screencapture.injectCss": "尝试为 Reporting 更新 Kibana CSS 时发生错误。{error}",
@@ -20752,6 +20744,14 @@
     "xpack.savedObjectsTagging.validation.description.errorTooLong": "标签描述不能超过 {length} 个字符",
     "xpack.savedObjectsTagging.validation.name.errorTooLong": "标签名称不能超过 {length} 个字符",
     "xpack.savedObjectsTagging.validation.name.errorTooShort": "标签名称必须至少有 {length} 个字符",
+    "xpack.screenshotting.browsers.chromium.errorDetected": "报告时遇到错误：{err}",
+    "xpack.screenshotting.browsers.chromium.pageErrorDetected": "Reporting 在将忽略的页面上遇到未捕获的错误：{err}",
+    "xpack.screenshotting.chromiumDriver.disallowedOutgoingUrl": "收到禁止的传出 URL：“{interceptedUrl}”。请求失败，关闭浏览器。",
+    "xpack.screenshotting.chromiumDriver.failedToCompleteRequest": "无法完成请求：{error}",
+    "xpack.screenshotting.chromiumDriver.failedToCompleteRequestUsingHeaders": "无法完成使用 headers 的请求：{error}",
+    "xpack.screenshotting.diagnostic.browserCrashed": "启动期间浏览器已异常退出",
+    "xpack.screenshotting.diagnostic.browserErrored": "启动时浏览器进程引发了错误",
+    "xpack.screenshotting.screencapture.browserWasClosed": "浏览器已意外关闭！有关更多信息，请查看服务器日志。",
     "xpack.screenshotting.serverConfig.autoSet.sandboxDisabled": "Chromium 沙盒提供附加保护层，但不受 {osName} OS 支持。自动设置“{configKey}: true”。",
     "xpack.screenshotting.serverConfig.autoSet.sandboxEnabled": "Chromium 沙盒提供附加保护层，受 {osName} OS 支持。自动启用 Chromium 沙盒。",
     "xpack.screenshotting.serverConfig.osDetected": "正在以下 OS 上运行：“{osName}”",
