--- a/docs/setup/connect-to-elasticsearch.asciidoc
+++ b/docs/setup/connect-to-elasticsearch.asciidoc
@@ -9,7 +9,7 @@ All integrations are available in a single view, and
 image::images/add-integration.png[Integrations page from which you can choose integrations to start collecting and analyzing data]
 
 NOTE: When an integration is available for
-https://www.elastic.co/guide/en/fleet/master/beats-agent-comparison.html[Elastic Agent and Beats], the *Integrations* view defaults to the
+https://www.elastic.co/guide/en/fleet/master/beats-agent-comparison.html[Elastic Agent and Beats] and is generally available (GA), the *Integrations* view defaults to the
 Elastic Agent integration..
 To switch to a
 Beats integration, use the filter on the bottom left.
