--- a/docs/setup/connect-to-elasticsearch.asciidoc
+++ b/docs/setup/connect-to-elasticsearch.asciidoc
@@ -92,7 +92,7 @@ You can manage your roles, privileges, and spaces in **{stack-manage-app}**.
 [discrete]
 === What's next?
 
-Once you add data to the Elastic Stack, take your investigation
+To take your investigation
 to a deeper level. Use <<discover, **Discover**>> to quickly gain insight to your data:
 search and filter your data, get information about the structure of the fields,
 and present your findings in a visualization.
