--- a/docs/api/alerting.asciidoc
+++ b/docs/api/alerting.asciidoc
@@ -1,7 +1,7 @@
 [[alerting-apis]]
 == Alerting APIs
 
-The following APIs are available for {kib} Alerting.
+The following APIs are available for Alerting.
 
 * <<create-rule-api, Create rule API>> to create a rule
 
