--- a/docs/user/production-considerations/production.asciidoc
+++ b/docs/user/production-considerations/production.asciidoc
@@ -86,7 +86,7 @@ active in case of failure from the currently used instance.
 === Reporting and multiple load-balanced {kib} clusters
 
 Depending on the load balancing configuration, you might need to specify 
-`xpack.reporting.kibanaServer.*` settings in case you want to use Reporting.
+`xpack.reporting.kibanaServer.*` settings to use *Reporting*.
 
 [float]
 [[high-availability]]
